# mankalah

./: Cargo.toml
notebooks/: ga_weights.cpp.fixed_depth.ipynb  ga_weights.cpp.ipynb  ga_weights.ipynb  ga_weights_5.cpp.ipynb  ga_weights_5.ipynb  ga_weights_test_agents.ipynb  ga_weights_test_agents_fixed_depth.ipynb
presentation/: sem1.md
src/: agent.rs  alpha_beta.rs  benchmark.rs  board.rs  eval.rs  grammar.rs  heuristics.rs  lib.rs  main.rs  minimax.rs  protocol.rs  results.md
