[package]
name = "mankalah"
version = "0.1.0"
authors = ["Karl Meakin <karlwfmeakin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.6.3"
clap = "2.33.3"
ordered-float = "2.0.1"
log = "0.4.11"

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"
